--- a/index.html
+++ b/index.html
@@ -23,10 +23,14 @@
 }
 
 /* Profile Cards */
-.profile { display: none; border-radius: 14px; margin-bottom: 10px; }
+.profile {
+  display: none;
+  border-radius: 14px;
+  margin-bottom: 10px;
+}
 .profile.active { display: block; }
 
-/* Slider & Video */
+/* Video Slider */
 .slider {
   position: relative;
   width: 100%;
@@ -49,18 +53,19 @@
   object-fit: contain;
 }
 
-/* Video navigation arrows */
+/* Video Nav Arrows */
 .video-nav {
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
-  font-size: 24px;
+  font-size: 30px;
   color: #fff;
-  background: rgba(0,0,0,0.5);
-  padding: 6px 10px;
+  background: rgba(0,0,0,0.4);
+  padding: 4px 8px;
   cursor: pointer;
-  border-radius: 12px;
+  border-radius: 50%;
   user-select: none;
+  z-index: 5;
 }
 .video-nav.left { left: 8px; }
 .video-nav.right { right: 8px; }
@@ -77,13 +82,16 @@
   transform: translateY(20px);
   transition: opacity 0.6s ease, transform 0.6s ease;
 }
-.profile.active .bio-card { opacity: 1; transform: translateY(0); }
+.profile.active .bio-card {
+  opacity: 1;
+  transform: translateY(0);
+}
 .bio-name { font-size: 22px; font-weight: 800; margin-bottom: 4px; }
 .bio-info { font-size: 14px; line-height: 1.4; color: #aaa; margin-bottom: 2px; }
 .bio-info span { font-weight: 600; color: #fff; }
 .fruit-pick { font-size: 21px; font-weight: 700; margin: 6px 0; }
 
-/* Profile Nav Buttons */
+/* Nav Buttons */
 .nav-buttons {
   display: flex;
   justify-content: space-between;
@@ -109,16 +117,6 @@
   box-shadow: 0 4px 12px rgba(223, 244, 31, 0.6);
 }
 .meet-btn { flex: 1; max-width: 120px; margin: 0 auto; }
-
-/* Safari Fix */
-@supports (-webkit-touch-callout: none) {
-  .slider video {
-    max-width: 340px !important;
-    height: auto !important;
-    object-fit: contain !important;
-  }
-}
-html, body { height: 100%; overflow-x: hidden; -webkit-overflow-scrolling: touch; }
 </style>
 
 <script>
@@ -148,12 +146,15 @@ document.addEventListener('DOMContentLoaded', function() {
       const slides = document.createElement('div'); slides.classList.add('slides');
       slider.appendChild(slides);
 
-      // Video arrows
+      // Video nav arrows
       const leftArrow = document.createElement('div');
-      leftArrow.classList.add('video-nav', 'left'); leftArrow.textContent = '<';
+      leftArrow.classList.add('video-nav', 'left');
+      leftArrow.innerHTML = '&#10094;'; // ❮
       const rightArrow = document.createElement('div');
-      rightArrow.classList.add('video-nav', 'right'); rightArrow.textContent = '>';
-      slider.appendChild(leftArrow); slider.appendChild(rightArrow);
+      rightArrow.classList.add('video-nav', 'right');
+      rightArrow.innerHTML = '&#10095;'; // ❯
+      slider.appendChild(leftArrow);
+      slider.appendChild(rightArrow);
 
       profileDiv.appendChild(slider);
 
@@ -170,31 +171,31 @@ document.addEventListener('DOMContentLoaded', function() {
       container.appendChild(profileDiv);
 
       // Render videos
-      const videoUrls = (profile.VideoIDs || '').split(/[\n,]+/).map(u => u.trim()).filter(u => u);
+      const videoURLs = (profile.VideoIDs || '').split(/[\n,]+/).map(u=>u.trim()).filter(Boolean);
       let currentVideo = 0;
-      videoUrls.forEach(url => {
-        const videoEl = document.createElement('video');
-        videoEl.src = url;
-        videoEl.autoplay = true;
-        videoEl.muted = true;
-        videoEl.loop = true;
-        videoEl.playsInline = true;
-        videoEl.controls = false;
-        videoEl.style.display = 'none';
-        slides.appendChild(videoEl);
+      const videoEls = videoURLs.map(url => {
+        const v = document.createElement('video');
+        v.src = url;
+        v.autoplay = true;
+        v.muted = true;
+        v.loop = true;
+        v.playsInline = true;
+        v.controls = false;
+        v.style.display = 'none';
+        slides.appendChild(v);
+        return v;
       });
-      if (slides.children.length) slides.children[0].style.display='block';
+      if(videoEls.length) videoEls[0].style.display='block';
 
-      // Arrow functionality
       leftArrow.addEventListener('click', () => {
-        slides.children[currentVideo].style.display='none';
-        currentVideo = (currentVideo-1+slides.children.length) % slides.children.length;
-        slides.children[currentVideo].style.display='block';
+        videoEls[currentVideo].style.display='none';
+        currentVideo = (currentVideo - 1 + videoEls.length) % videoEls.length;
+        videoEls[currentVideo].style.display='block';
       });
       rightArrow.addEventListener('click', () => {
-        slides.children[currentVideo].style.display='none';
-        currentVideo = (currentVideo+1) % slides.children.length;
-        slides.children[currentVideo].style.display='block';
+        videoEls[currentVideo].style.display='none';
+        currentVideo = (currentVideo + 1) % videoEls.length;
+        videoEls[currentVideo].style.display='block';
       });
     });
   }
