--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ document.addEventListener('DOMContentLoaded', function() {
   const container = document.getElementById('profiles-container');
   let allProfiles = [];
   let activeIndex = 0;
-  const API_KEY = '7dli8bleg4bq8';
+  const API_KEY = 'hbsl661b2wi59';
   let sessionViews = JSON.parse(sessionStorage.getItem('viewedProfiles') || '[]');
 
   fetch(`https://sheetdb.io/api/v1/${API_KEY}?limit=50`)
